# GIS-AWBEM

./: LICENSE.md  README.md  pyproject.toml
GIS-AWBEM/: readme.md
GIS-AWBEM/Inputs/: Bergwald_enrich.csv  Bergwald_truncated.geojson  Heidelberg.geojson  Internal gain profiles plot.xlsx  Mannheim_01975.epw  OSM_District.geojson  Rheinstetten_04177.epw  Tabula_Uvalues.csv  ~$Internal gain profiles plot.xlsx
GIS-AWBEM/Inputs/HUB4LCA/Culture/: minimal_excel_Culture_only_window.xlsx  minimal_excel_Culture_yes.xlsx
GIS-AWBEM/Inputs/HUB4LCA/Education/: minimal_excel_Education_only_window.xlsx  nuanced_excel_north_2002-2009_Education_only_window.xlsx
GIS-AWBEM/Inputs/HUB4LCA/Health/: minimal_excel_Health_only_window.xlsx
GIS-AWBEM/Inputs/HUB4LCA/Hospitality/: minimal_excel_Hospitality_only_window.xlsx  minimal_excel_Hospitality_yes.xlsx  nuanced_excel_north_-1918_Hospitality_old_only_window.xlsx  nuanced_excel_north_-1918_Hospitality_old_yes.xlsx  nuanced_excel_north_1949-1957_Hospitality_old_only_window.xlsx  nuanced_excel_north_1995-2001_Hospitality_new_only_window.xlsx  nuanced_excel_north_1995-2001_Hospitality_new_yes.xlsx  (+2 more)
GIS-AWBEM/src/: EP_IdealHVAC.py  Gen_IDF_IdealHVAC.py  Run_IdealHVAC.py  pre_process.py  readme.md  utilities.py
GIS-AWBEM/src/GIS_AWBEM/: EP.py  Gen_IDF_Boiler_DXcoil.py  Gen_IDF_IdealHVAC.py  Gen_IDF_PTHP.py  Run.py  Simulate.py  post_process.py  pre_process.py  utilities.py
GIS-AWBEM/src/Generated_IDFs/: readme.md
examples/: readme.md
examples/Example 1/: run_example1.py
examples/Example 2/: run_example2.py
img/: readme.md
(+963 files in other folders)
